gem2deb (0.1.1) experimental; urgency=low

  * Rename library files to match the Ruby convention
  * Reorganize the DhMakeRuby class
  * Add --package option to gem2deb and dh-make-ruby, to specify the
    name of the package to generate
  * Generate packages that depend on ruby1.8 | ruby-interpreter.
  * When tests fail, and user says No, do not continue.
  * Add Vcs-* fields after moving to PRE repo
  * Document that gem2deb can download the gem using gem fetch
  * gem2tgz gemname now downloads the gem if needed.
  * Generate a better debian/copyright template.
  * Support DEB_BUILD_OPTIONS=nocheck.
  * Put everything in the same binary package.

 -- Lucas Nussbaum <lucas@lucas-nussbaum.net>  Wed, 23 Mar 2011 16:06:45 +0100

gem2deb (0.1.0) experimental; urgency=low

  * Initial release.

 -- Lucas Nussbaum <lucas@lucas-nussbaum.net>  Fri, 04 Mar 2011 09:59:56 +0100